add junit and some little changes